<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="Typos">
    <string name="app_name">HomeLibrary</string>
    <string name="menu_sort">Sortuj</string>

    <string name="all_books_activity_title">Twoje książki</string>
    <string name="book_sort_main_text">Sortowanie</string>
    <string name="book_sort_title_asc">Tytuł A-Z</string>
    <string name="book_sort_title_desc">Tytuł Z-A</string>
    <string name="book_sort_author_asc">Autor A-Z</string>
    <string name="book_sort_author_desc">Autor Z-A</string>
    <string name="book_sort_score_desc">Ocena malejąco</string>
    <string name="book_sort_score_asc">Ocena rosnąco</string>
    <string name="title_activity_login">Logowanie</string>
    <string name="login_prompt_login">Login</string>
    <string name="login_prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj</string>
    <string name="error_invalid_email">Podany login jest niepoprawny</string>
    <string name="error_invalid_password">Podane hasło jest zbyt krótkie</string>
    <string name="error_incorrect_password">Podane hasło jest nieprawidłowe</string>
    <string name="error_field_required">Pole wymagane</string>
    <string name="action_register">Zarejestruj</string>
    <string name="error_login_already_exists">Podany login już istnieje</string>
    <string name="register_prompt_email">Email</string>
    <string name="register_prompt_confirm_password">Potwierdź hasło</string>
    <string name="register_prompt_password">Hasło</string>
    <string name="register_prompt_login">Login</string>
    <string name="registration_label">Rejestracja</string>
    <string name="login_remind_password">Zapomniałeś hasła?</string>
    <string name="email">Email</string>
    <string name="action_forgot_password">Przypomnij hasło</string>
    <string name="login_remember_me">Zapamiętaj mnie</string>
    <string name="premium">Premium</string>
    <string name="profile">Profil</string>
    <string name="my_rooms">Moje pokoje</string>
    <string name="my_books">Moje książki</string>
    <string name="search">Szukaj</string>
    <string name="log_out">Wyloguj</string>
    <string name="profile_pic">Profile pic</string>
    <string name="change_password">Zmnień hasło</string>
    <string name="change_email">Zmień adres email</string>
    <string name="delete_account">Usuń konto</string>
    <string name="old_password">Stare hasło</string>
    <string name="new_password">Nowe hasło</string>
    <string name="confirm_new_password">Potwierdź nowe hasło</string>
    <string name="new_email">Nowy email</string>
    <string name="confirm_identity">Potwierdź tożsamość</string>
    <string name="rule_password">Hasło musi zawierać małe i duże litery, min. 1 cyfrę oraz min. 1 znak specjalny, nie posiadać białych znaków oraz mieć minimum 8 znaków</string>
    <string name="rule_login">Login powinien mieć minimum 5 i maksimum 20 znaków i posiadać tylko małe i duże litery oraz cyfry</string>
    <string name="rule_email">Zły format adresu email</string>
    <string name="shelf">Półka</string>
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="room_name">Nazwa pokoju</string>
    <string name="short_name_desc">Skrócona nazwa:</string>
    <string name="colour_desc">Kolor:</string>
    <string name="accept">Zatwierdź</string>
    <string name="no_rooms_info">Nie wprowadzono żadnego pokoju</string>
    <string name="rating">Ocena</string>
    <string name="shelf_number">Nr</string>
    <string name="shelf_number_text">Nr półki:</string>
    <string name="room_text">Pokój:</string>
    <string name="query_hint">Czego szukasz?</string>
    <string name="no_books_info">Nie wprowadzono żadnej książki</string>
    <string name="no_gba_books_info">Nie znaleziono żadnych pasujących książek do Twojego zapytana</string>
    <string name="book_query_hint">Czego szukasz?</string>
</resources>
