<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/confirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        tools:ignore="Autofill" />
</LinearLayout>