<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activities.ProfileActivity">

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:contentDescription="@string/profile_pic"
            android:src="@drawable/ic_person_white_24dp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="login"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="email"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/changePassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:layout_weight="1"
            android:text="@string/change_password" />

        <Button
            android:id="@+id/changeEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:layout_weight="1"
            android:text="@string/change_email" />

        <Button
            android:id="@+id/deleteAccount"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="32dp"
            android:layout_weight="1"
            android:text="@string/delete_account" />

    </LinearLayout>
</ScrollView>
